####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libprinting_a_METASOURCES = AUTO

noinst_LIBRARIES = libprinting.a

libprinting_a_SOURCES = cstyleformatframe.cpp cstyleformat.cpp cstylelist.cpp cprintitemlist.cpp cprintitem.cpp cstyle.cpp cstyleeditordialog.cpp cprinter.cpp cprinterdialog.cpp 


EXTRA_DIST = cprinterdialog.cpp cprinterdialog.h cprinter.cpp cprinter.h cstyleeditordialog.cpp cstyleeditordialog.h cstyle.cpp cstyle.h cprintitem.cpp cprintitem.h cprintitemlist.cpp cprintitemlist.h cstylelist.cpp cstylelist.h cstyleformat.cpp cstyleformat.h cstyleformatframe.cpp cstyleformatframe.h 

####### kdevelop will overwrite this part!!! (end)############
