INCLUDES = $(all_includes)

libprinting_a_METASOURCES = AUTO

noinst_LIBRARIES = libprinting.a

libprinting_a_SOURCES = \
cstylelist.cpp \
cprintitemlist.cpp \
cprintitem.cpp \
cstyle.cpp \
cstyleeditordialog.cpp \
cprinter.cpp \
cprintdialogpages.cpp


all_headers =  \
cstylelist.h \
cprintitemlist.h \
cprintitem.h \
cstyle.h \
cstyleeditordialog.h \
cprinter.h \
cprintdialogpages.h


EXTRA_DIST = $(libprinting_a_SOURCES) $(all_headers)
