KDE_CXXFLAGS = -fexceptions -frtti
KDE_OPTIONS = qtonly
libswordbackend_a_METASOURCES = AUTO
noinst_LIBRARIES = libswordbackend.a

libswordbackend_a_SOURCES = \
cswordmodulesearch.cpp \
chtmlchapterdisplay.cpp \
chtmlentrydisplay.cpp \
cswordmoduleinfo.cpp \
cswordbackend.cpp \
cswordldkey.cpp \
cswordversekey.cpp \
cswordlexiconmoduleinfo.cpp \
cswordcommentarymoduleinfo.cpp \
cswordbiblemoduleinfo.cpp \
cswordconfig.cpp

INCLUDES = $(all_includes)

EXTRA_DIST = cswordbiblemoduleinfo.cpp \
cswordbiblemoduleinfo.h \
cswordcommentarymoduleinfo.cpp \
cswordcommentarymoduleinfo.h \
cswordlexiconmoduleinfo.cpp \
cswordlexiconmoduleinfo.h \
cswordversekey.cpp \
cswordversekey.h \
cswordldkey.cpp \
cswordldkey.h \
cswordbackend.cpp \
cswordbackend.h \
cswordmoduleinfo.cpp \
cswordmoduleinfo.h \
chtmlentrydisplay.cpp \
chtmlentrydisplay.h \
chtmlchapterdisplay.cpp \
chtmlchapterdisplay.h \
cswordmodulesearch.cpp \
cswordmodulesearch.h \
cswordconfig.h \
cswordconfig.cpp
