INCLUDES = $(all_includes)

libdisplay_a_METASOURCES = AUTO

noinst_LIBRARIES = libdisplay.a

libdisplay_a_SOURCES = \
cdisplay.cpp \
creaddisplay.cpp \
chtmlreaddisplay.cpp \
cwritedisplay.cpp

all_headers = \
cdisplay.h \
creaddisplay.h \
chtmlreaddisplay.h \
cwritedisplay.h

EXTRA_DIST = $(libdisplay_a_SOURCES) $(all_headers)

