INCLUDES = $(all_includes)

libdisplay_a_METASOURCES = AUTO

noinst_LIBRARIES = libdisplay.a

libdisplay_a_SOURCES = \
cdisplay.cpp \
creaddisplay.cpp \
chtmlreaddisplay.cpp \
cwritedisplay.cpp \
cplainwritedisplay.cpp \
chtmlwritedisplay.cpp

all_headers = \
cdisplay.h \
creaddisplay.h \
chtmlreaddisplay.h \
cwritedisplay.h \
cplainwritedisplay.h \
chtmlwritedisplay.h

EXTRA_DIST = $(libdisplay_a_SOURCES) $(all_headers)

