INCLUDES = $(all_includes)

libdisplay_a_METASOURCES = AUTO

noinst_LIBRARIES = libdisplay.a

libdisplaywindow_a_SOURCES = \
cbiblereadwindow.cpp \
cbookreadwindow.cpp \
ccommentaryreadwindow.cpp \
cdisplaysettingsbutton.cpp \
cdisplaywindow.cpp \
clexiconreadwindow.cpp \
cmodulechooserbar.cpp \
cmodulechooserbutton.cpp \
creadwindow.cpp \
cwritewindow.cpp

all_headers = \
cbiblereadwindow.h \
cbookreadwindow.h \
ccommentaryreadwindow.h \
cdisplaysettingsbutton.h \
cdisplaywindow.h \
clexiconreadwindow.h \
cmodulechooserbar.h \
cmodulechooserbutton.h \
creadwindow.h \
cwritewindow.h

EXTRA_DIST = $(libdisplay_a_SOURCES) $(all_headers)

