INCLUDES = $(all_includes)

libdisplaywindow_a_METASOURCES = AUTO

noinst_LIBRARIES = libdisplaywindow.a

libdisplaywindow_a_SOURCES = \
cbiblereadwindow.cpp \
cbookreadwindow.cpp \
ccommentaryreadwindow.cpp \
cdisplaysettingsbutton.cpp \
cdisplaywindow.cpp \
clexiconreadwindow.cpp \
cmodulechooserbar.cpp \
cmodulechooserbutton.cpp \
creadwindow.cpp \
cwritewindow.cpp

all_headers = \
cbiblereadwindow.h \
cbookreadwindow.h \
ccommentaryreadwindow.h \
cdisplaysettingsbutton.h \
cdisplaywindow.h \
clexiconreadwindow.h \
cmodulechooserbar.h \
cmodulechooserbutton.h \
creadwindow.h \
cwritewindow.h

EXTRA_DIST = $(libdisplaywindow_a_SOURCES) $(all_headers)

