INCLUDES = $(all_includes)

libdisplaywindow_a_METASOURCES = AUTO

noinst_LIBRARIES = libdisplaywindow.a

libdisplaywindow_a_SOURCES = \
cbiblereadwindow.cpp \
cbookreadwindow.cpp \
ccommentaryreadwindow.cpp \
cdisplaywindow.cpp \
clexiconreadwindow.cpp \
cmodulechooserbar.cpp \
cmodulechooserbutton.cpp \
creadwindow.cpp \
cwritewindow.cpp \
cbuttons.cpp

all_headers = \
cbiblereadwindow.h \
cbookreadwindow.h \
ccommentaryreadwindow.h \
cdisplaywindow.h \
clexiconreadwindow.h \
cmodulechooserbar.h \
cmodulechooserbutton.h \
creadwindow.h \
cwritewindow.h \
cbuttons.h

EXTRA_DIST = $(libdisplaywindow_a_SOURCES) $(all_headers)

