INCLUDES = $(all_includes)

libkeychooser_a_METASOURCES = AUTO

noinst_LIBRARIES = libkeychooser.a

libkeychooser_a_SOURCES = cbiblekeychooser.cpp clexiconkeychooser.cpp ckeychooser.cpp cfx_btn.cpp ckeychooserwidget.cpp 


EXTRA_DIST = $(libkeychooser_a_SOURCES) \
ckeychooserwidget.h \
cfx_btn.h \
ckeychooser.h \
clexiconkeychooser.h \
cbiblekeychooser.h
