INCLUDES = $(all_includes)

libkeychooser_a_METASOURCES = AUTO

noinst_LIBRARIES = libkeychooser.a

libkeychooser_a_SOURCES = \
cbiblekeychooser.cpp \
clexiconkeychooser.cpp \
ckeychooser.cpp \
cfx_btn.cpp \
ckeychooserwidget.cpp \
cbookkeychooser.cpp \
cbooktreechooser.cpp \
crefselectdialog.cpp

all_headers = ckeychooserwidget.h \
cfx_btn.h \
ckeychooser.h \
clexiconkeychooser.h \
cbiblekeychooser.h \
cbookkeychooser.h \
cbooktreechooser.h \
crefselectdialog.h

EXTRA_DIST = $(libkeychooser_a_SOURCES) $(all_headers)

