INCLUDES = $(all_includes)

libkeychooser_a_METASOURCES = AUTO

noinst_LIBRARIES = libkeychooser.a

libkeychooser_a_SOURCES = \
cbiblekeychooser.cpp \
clexiconkeychooser.cpp \
ckeychooser.cpp \
cscrollbutton.cpp \
ckeychooserwidget.cpp \
cbookkeychooser.cpp \
cbooktreechooser.cpp

all_headers = ckeychooserwidget.h \
cscrollbutton.h \
ckeychooser.h \
clexiconkeychooser.h \
cbiblekeychooser.h \
cbookkeychooser.h \
cbooktreechooser.h

EXTRA_DIST = $(libkeychooser_a_SOURCES) $(all_headers)
