####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

liboptionsdialog_a_METASOURCES = AUTO

noinst_LIBRARIES = liboptionsdialog.a

liboptionsdialog_a_SOURCES = coptionsdialog.cpp 


EXTRA_DIST = coptionsdialog.cpp coptionsdialog.h 

####### kdevelop will overwrite this part!!! (end)############
