INCLUDES = $(all_includes)

libpresenters_a_METASOURCES = AUTO

noinst_LIBRARIES = libpresenters.a

libpresenters_a_SOURCES = \
cbiblepresenter.cpp \
clexiconpresenter.cpp \
ccommentarypresenter.cpp \
cpresenter.cpp \
cswordpresenter.cpp \
cmodulechooserbar.cpp \
cmodulechooserbutton.cpp

EXTRA_DIST = \
ccommentarypresenter.cpp ccommentarypresenter.h \
clexiconpresenter.cpp clexiconpresenter.h \
cbiblepresenter.cpp cbiblepresenter.h \
cmodulechooserbar.h cmodulechooserbar.cpp \
cmodulechooserbutton.h cmodulechooserbutton.cpp \
cswordpresenter.h cswordpresenter.cpp \
cpresenter.h cpresenter.cpp

KDE_CXXFLAGS=-fexceptions -frtti