INCLUDES = $(all_includes)

libpresenters_a_METASOURCES = AUTO

noinst_LIBRARIES = libpresenters.a

libpresenters_a_SOURCES = \
cbiblepresenter.cpp \
clexiconpresenter.cpp \
ccommentarypresenter.cpp \
cswordpresenter.cpp \
cmodulechooserbar.cpp \
cmodulechooserbutton.cpp

EXTRA_DIST = $(libpresenters_a_SOURCES) \
ccommentarypresenter.h \
clexiconpresenter.h \
cbiblepresenter.h \
cmodulechooserbar.h \
cmodulechooserbutton.h \
cswordpresenter.h
