INCLUDES = $(all_includes)

libpresenters_a_METASOURCES = AUTO

noinst_LIBRARIES = libpresenters.a

libpresenters_a_SOURCES = \
cbiblepresenter.cpp \
clexiconpresenter.cpp \
ccommentarypresenter.cpp \
cbookpresenter.cpp \
cswordpresenter.cpp \
cmodulechooserbar.cpp \
cmodulechooserbutton.cpp \
cdisplaysettingsbutton.cpp

all_headers=ccommentarypresenter.h \
clexiconpresenter.h \
cbiblepresenter.h \
cmodulechooserbar.h \
cmodulechooserbutton.h \
cbookpresenter.h \
cswordpresenter.h \
cdisplaysettingsbutton.h


EXTRA_DIST = $(libpresenters_a_SOURCES) $(all_headers)

