INCLUDES = $(all_includes)

libsearchdialog_a_METASOURCES = AUTO

noinst_LIBRARIES = libsearchdialog.a

libsearchdialog_a_SOURCES = \
csearchdialog.cpp \
csearchdialoganalysis.cpp \
csearchdialogresultview.cpp \
csearchdialogresult.cpp \
csearchdialogtext.cpp \
csearchdialogscope.cpp \
csearchdialogmodulechooser.cpp

all_headers = csearchdialogmodulechooser.h \
csearchdialogtext.h \
csearchdialogscope.h \
csearchdialogresult.h \
csearchdialogresultview.h \
csearchdialoganalysis.h \
csearchdialogmodulechooser.h \
csearchdialog.h

EXTRA_DIST = $(libsearchdialog_a_SOURCES) $(all_headers)

