INCLUDES = $(all_includes)

libsearchdialog_a_METASOURCES = AUTO

noinst_LIBRARIES = libsearchdialog.a

libsearchdialog_a_SOURCES = \
searchoptionsform.ui   \
searchresultsform.ui   \
csearchdialog.cpp      \
csearchdialogpages.cpp \
csearchanalysis.cpp    \
cmodulechooser.cpp     \
crangechooser.cpp      \
cmoduleresultview.cpp  \
csearchresultview.cpp

all_headers = \
csearchdialog.h \
csearchdialogpages.h \
csearchanalysis.h \
cmodulechooser.h \
crangechooser.h


EXTRA_DIST = $(libsearchdialog_a_SOURCES) $(all_headers)


