####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = module_encrypted.html first_startup.html initbackend_failed.html no_mods_d.html no_modules.html 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/de/bibletime/
	$(INSTALL_DATA) module_encrypted.html $(kde_htmldir)/de/bibletime/module_encrypted.html
	$(mkinstalldirs) $(kde_htmldir)/de/bibletime/
	$(INSTALL_DATA) first_startup.html $(kde_htmldir)/de/bibletime/first_startup.html
	$(mkinstalldirs) $(kde_htmldir)/de/bibletime/
	$(INSTALL_DATA) initbackend_failed.html $(kde_htmldir)/de/bibletime/initbackend_failed.html
	$(mkinstalldirs) $(kde_htmldir)/de/bibletime/
	$(INSTALL_DATA) no_mods_d.html $(kde_htmldir)/de/bibletime/no_mods_d.html
	$(mkinstalldirs) $(kde_htmldir)/de/bibletime/
	$(INSTALL_DATA) no_modules.html $(kde_htmldir)/de/bibletime/no_modules.html

uninstall-local:
	-rm -f $(kde_htmldir)/de/bibletime/module_encrypted.html
	-rm -f $(kde_htmldir)/de/bibletime/first_startup.html
	-rm -f $(kde_htmldir)/de/bibletime/initbackend_failed.html
	-rm -f $(kde_htmldir)/de/bibletime/no_mods_d.html
	-rm -f $(kde_htmldir)/de/bibletime/no_modules.html

####### kdevelop will overwrite this part!!! (end)############
