####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = first_startup.html initbackend_failed.html no_modules.html no_mods_d.html module_encrypted.html 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/bibletime/
	$(INSTALL_DATA) first_startup.html $(kde_htmldir)/en/bibletime/first_startup.html
	$(mkinstalldirs) $(kde_htmldir)/en/bibletime/
	$(INSTALL_DATA) initbackend_failed.html $(kde_htmldir)/en/bibletime/initbackend_failed.html
	$(mkinstalldirs) $(kde_htmldir)/en/bibletime/
	$(INSTALL_DATA) no_modules.html $(kde_htmldir)/en/bibletime/no_modules.html
	$(mkinstalldirs) $(kde_htmldir)/en/bibletime/
	$(INSTALL_DATA) no_mods_d.html $(kde_htmldir)/en/bibletime/no_mods_d.html
	$(mkinstalldirs) $(kde_htmldir)/en/bibletime/
	$(INSTALL_DATA) module_encrypted.html $(kde_htmldir)/en/bibletime/module_encrypted.html

uninstall-local:
	-rm -f $(kde_htmldir)/en/bibletime/first_startup.html
	-rm -f $(kde_htmldir)/en/bibletime/initbackend_failed.html
	-rm -f $(kde_htmldir)/en/bibletime/no_modules.html
	-rm -f $(kde_htmldir)/en/bibletime/no_mods_d.html
	-rm -f $(kde_htmldir)/en/bibletime/module_encrypted.html

####### kdevelop will overwrite this part!!! (end)############
