KDE_ICON = AUTO
EXTRA_DIST=\
hi22-action_bt_parallel.png \
hi22-action-bt_bible_add.png \
hi22-action-bt_commentary_add.png \
hi22-action-bt_tile.png \
hi22-action-bt_tile_auto.png \
hi22-action-bt_search.png \
hi22-action-bt_cascade.png \
hi22-action-bt_cascade_auto.png \
hi22-action-bt_daily_tip.png \
hi22-action-bt_edit_commentary.png \
hi22-action-bt_strongs.png \
hi22-action-bt_footnotes.png \
hi22-action-contents.png \
hi22-action-exit.png \
hi22-action-fileprint.png \
hi22-action-info.png \
hi22-action-text_bold.png \
hi22-action-text_center.png \
hi22-action-text_italic.png \
hi22-action-text_left.png \
hi22-action-text_right.png \
hi22-action-text_under.png