KDE_ICON = AUTO
EXTRA_DIST=\
hi22-action-bt_bible.png \
hi22-action-bt_parallel.png \
hi22-action-bt_bible_add.png \
hi22-action-bt_commentary.png \
hi22-action-bt_commentary_add.png \
hi22-action-bt_lexicon.png \
hi22-action-bt_lexicon_add.png \
hi22-action-bt_tile.png \
hi22-action-bt_tile_auto.png \
hi22-action-bt_search.png \
hi22-action-bt_cascade.png \
hi22-action-bt_cascade_auto.png \
hi22-action-bt_daily_tip.png \
hi22-action-bt_strongs.png \
hi22-action-bt_sync.png \
hi22-action-bt_footnotes.png

