EXTRA_DIST = hi22-action-bt_bible.png hi22-action-bt_bible_add.png hi22-action-bt_book.png hi22-action-bt_book_add.png hi22-action-bt_cascade.png hi22-action-bt_cascade_auto.png hi22-action-bt_commentary.png hi22-action-bt_commentary_add.png hi22-action-bt_displayconfig.png hi22-action-bt_lexicon.png hi22-action-bt_lexicon_add.png hi22-action-bt_parallel.png hi22-action-bt_startconfig.png hi22-action-bt_swordconfig.png hi22-action-bt_sync.png hi22-action-bt_tile.png hi22-action-bt_tile_auto.png
KDE_ICON = AUTO
