KDE_ICON = AUTO
EXTRA_DIST=\
hi32-action-bt_bible_add.png \
hi32-action-bt_commentary_add.png \
hi32-action-bt_parallel.png \
hi32-action-bt_sync.png \
hi32-action-bt_footnotes.png \
hi32-action-bt_strongs.png \
hi32-action-bt_cascade.png \
hi32-action-bt_cascade_auto.png \
hi32-action-bt_daily_tip.png \
hi32-action-bt_tile.png \
hi32-action-bt_tile_auto.png \
hi32-action-bt_search.png \
hi32-action-bt_general_settings.png \
hi32-action-bt_font_settings.png \
hi32-action-bt_color_settings.png \
hi32-action-bt_key_settings.png \
hi32-action-contents.png \
hi32-action-bt_printer.png \
hi32-action-text_bold.png \
hi32-action-text_center.png \
hi32-action-text_italic.png \
hi32-action-text_left.png \
hi32-action-text_right.png \
hi32-action-text_under.png \
hi32-app-bibletime.png

