KDE_ICON = AUTO
EXTRA_DIST=\
hi32-action-bt_bible_add.png \
hi32-action-bt_commentary_add.png \
hi32-action-bt_parallel.png \
hi32-action-bt_sync.png \
hi32-action-bt_footnotes.png \
hi32-action-bt_strongs.png \
hi32-action-bt_cascade.png \
hi32-action-bt_cascade_auto.png \
hi32-action-bt_tile.png \
hi32-action-bt_tile_auto.png \
hi32-action-bt_search.png \
hi32-app-bibletime.png

