KDE_ICON = AUTO
EXTRA_DIST = hi48-action-bt_bible.png hi48-action-bt_bible_add.png hi48-action-bt_book.png hi48-action-bt_book_add.png hi48-action-bt_commentary.png hi48-action-bt_commentary_add.png hi48-action-bt_displayconfig.png hi48-action-bt_lexicon.png hi48-action-bt_lexicon_add.png hi48-action-bt_startconfig.png hi48-action-bt_swordconfig.png hi48-app-bibletime.png
