EXTRA_DIST = \
lo16-action-bt_bible.png \
lo16-action-bt_bible_locked.png \
lo16-action-bt_bookmark.png \
lo16-action-bt_bookmark_change.png \
lo16-action-bt_bookmark_export.png \
lo16-action-bt_bookmark_import.png \
lo16-action-bt_bookmark_new.png \
lo16-action-bt_commentary.png \
lo16-action-bt_commentary_locked.png \
lo16-action-bt_group.png \
lo16-action-bt_group_change.png \
lo16-action-bt_group_open.png \
lo16-action-bt_group_new.png \
lo16-action-bt_groupmanager.png \
lo16-action-bt_info.png \
lo16-action-bt_lexicon.png \
lo16-action-bt_lexicon_locked.png \
lo16-action-bt_new_presenter.png \
lo16-action-bt_search.png \
lo16-action-bt_unlock_module.png \
lo16-app-bibletime.png
KDE_ICON = AUTO
